--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,82 +1,103 @@
-/* Home.css */
-
-.home-section {
+.section {
+    height: 80vh;
+    width: 100%;
     position: relative;
-    background-color: #f8f9fa;
+    overflow: hidden;
+}
+
+.particles {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.home-content {
+    position: relative;
+    z-index: 1;
     padding: 50px 0;
-}
-
-.home-header {
+    text-align: center;
+    color: #ffffff;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
 }
 
-.heading {
-    font-size: 2.5em;
+.intro-section {
+    width: 30%;
+    padding-right:10%;
+    padding-top:5%;
 }
 
 .main-name {
+  font-size: 30px;
+  color: transparent;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
+  letter-spacing: 4px;
+  background: blue;
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: mix 5s infinite;
+  font-family: 'Press Start 2P', cursive;
+}
+
+@keyframes mix {
+  0% {
+    background-position: 0 0;
+  }
+  25% {
+    top: -5px;
+    left: 5px;
+  }
+  50% {
+    top: 5px;
+    left: -5px;
+  }
+  75% {
+    top: 5px;
+    left: 5px;
+  }
+  100% {
+    top: -5px;
+    left: -5px;
+    background-position: -200% -200%;
+  }
+}
+
+
+
+
+
+.name-section {
+    width: 40%;
+    padding-bottom:5%;
+}
+
+.heading-name {
+    font-size: 3em;
     color: #6c63ff;
-}
-
-.wave {
-    animation: wave-animation 1.5s infinite linear;
-}
-
-@keyframes wave-animation {
-    0% {
-        transform: rotate(0deg);
-    }
-    10% {
-        transform: rotate(-10deg);
-    }
-    20% {
-        transform: rotate(12deg);
-    }
-    30% {
-        transform: rotate(-10deg);
-    }
-    40% {
-        transform: rotate(9deg);
-    }
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(0deg);
-    }
-}
-
-.home-about-social {
-    text-align: center;
-    padding-top: 20px;
-}
-
-.home-about-social h1 {
-    font-size: 2.5em;
     margin-bottom: 20px;
 }
 
-.home-about-social p {
-    font-size: 1.5em;
+.typewriter-container {
+    margin-bottom: 20px;
 }
 
-.home-about-social-links {
-    list-style: none;
-    padding: 0;
+.intro-text {
+    font-size: 1.1em;
+    line-height: 1.6;
 }
 
-.home-about-social-links li {
-    display: inline-block;
-    margin: 0 10px;
+.intro-text a {
+    color: #ffffff;
+    text-decoration: none;
+    transition: color 0.3s ease;
 }
 
-.home-about-social-links a {
+.intro-text a:hover {
     color: #6c63ff;
-    font-size: 2em;
-}
-
-.home-about-social-links a:hover {
-    color: #000;
 }
