--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,37 +1,52 @@
+/* Navbar.css */
+
+/* Set the height of the navbar to 10% of the viewport height and width to 100% of the viewport width */
 .navbar {
-    background-color: #292a2b;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    height: 10vh;
+    width: 100vw;
 }
 
+
+.ms-auto {
+    padding: 2%;
+}
+
+/* Style for the navbar brand */
 .navbar-brand {
-    color: #ffffff;
-    font-size: 1.5rem;
+    color: #ffffff; /* White color for the text */
+    font-size: 3.5rem; /* Larger font size */
 }
 
+/* Additional styling for the brand text */
 .navbar-brand .brand {
-    font-weight: bold;
-    font-style: italic;
+    font-weight: bold; /* Bold font weight */
+    font-style: italic; /* Italic font style */
 }
 
+/* Styling for each navigation link */
 .navbar-nav .nav-link {
-    color: #ffffff;
-    font-size: 1.1rem;
-    transition: all 0.3s ease;
-    margin-right: 20px;
+    color: #ffffff; /* White color for the text */
+    font-size: 2.1rem; /* Font size */
+    padding-right: 40px;
+    transition: all 0.3s ease; /* Smooth transition for hover/focus effects */
+    margin-right: 20px; /* Right margin between links */
 }
 
+/* Hover and focus effect for navigation links */
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
-    color: #17a2b8;
+    color: #17a2b8; /* Light blue color when hovered/focused */
 }
 
+/* Background color for the toggler icon in collapsed navbar */
 .navbar-toggler-icon {
-    background-color: #ffffff;
+    background-color: #ffffff; /* White background color */
 }
 
+/* Additional styling for navigation links on smaller screens */
 @media (max-width: 768px) {
     .navbar-nav .nav-link {
-        margin-right: 0;
-        margin-bottom: 10px;
+        margin-right: 0; /* Remove right margin */
+        margin-bottom: 10px; /* Add bottom margin between links */
     }
 }
