add some cool css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background: url('images/bg.jpg') center center no-repeat; /* Background image path */
+  background: black; /* Background image path */
   background-size: cover; /* Cover the entire container */
 }
 
