--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -69,7 +69,7 @@
     width: 100%;
     border: none;
     background: #991d57;
-    background-image: linear-gradient(bottom, #8c1c50 0%, #991d57 52%);
+    background-image: linear-gradient(to top, #8c1c50 0%, #991d57 52%);
     background-image: -moz-linear-gradient(bottom, #8c1c50 0%, #991d57 52%);
     background-image: -webkit-linear-gradient(bottom, #8c1c50 0%, #991d57 52%);
     color: #fff;
@@ -78,7 +78,7 @@
     border-radius: 5px;
 }
 #contact-form button[type="submit"]:hover {
-    background-image: linear-gradient(bottom, #9c215a 0%, #a82767 52%);
+    background-image: linear-gradient(to top, #8c1c50 0%, #991d57 52%);
     background-image: -moz-linear-gradient(bottom, #9c215a 0%, #a82767 52%);
     background-image: -webkit-linear-gradient(bottom, #9c215a 0%, #a82767 52%);
     -webkit-transition: background 0.3s ease-in-out;
